egonlang-core/res/examples/invalid/let_decl_typed_as_string_with_bool_value_type.eg
let a: String = false;

// out: TypeError: mismatched types: expected type `String` but received `Bool`